Corrected emoji vertical alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,10 @@ body {
       font-size: 2.5rem;
   }
 
+  .header__greetings .emoji {
+    vertical-align: text-top;
+  }
+
   .header__subtext {
     font-size: 2.5rem;
   }
